# renting-in-london

./: .gitignore  README.md  agent.py  app.py  cursorrules  pyproject.toml  requirements.txt
data/: area_profiles.py  london_areas.py
scripts/: _check_polish.py  _debug_api.py  _debug_filters.py  _debug_missing_property.py  _debug_pages.py  _test_overpass.py  diagnose_search.py  live_full_count.py  live_property_count.py
tests/: test_area_intel_tool.py  test_commute_time_tool.py  test_constraint_impact_tool.py  test_decision_ranker_tool.py  test_fuzz_commute_time_parsing.py  test_fuzz_property_details_parsing.py  test_fuzz_rightmove_search_parsing.py  test_local_amenities_tool.py  test_price_scorer_tool.py  test_property_details_tool.py  test_rightmove_search_tool.py  test_tools_optimization_audit.py
tools/: area_intel.py  commute_time.py  constraint_impact.py  cost_calculator.py  crime_data.py  decision_ranker.py  listing_signals.py  local_amenities.py  price_scorer.py  property_details.py  rightmove_search.py
